syntax = "proto3";
package proto;

import "general.proto";
import "service.proto";
import "volume.proto";

service DaemonSet {
    rpc CreateDaemonSet (DaemonSetService) returns (ServiceResponse) {}
    rpc DeleteDaemonSet  (DaemonSetService) returns (ServiceResponse) {}
    rpc GetDaemonSet (DaemonSetService) returns (ServiceResponse) {}
    rpc PatchDaemonSet  (DaemonSetService) returns (ServiceResponse) {}
    rpc PutDaemonSet (DaemonSetService) returns (ServiceResponse) {}
}

message DaemonSetService {
    string project_id = 1;
    string service_id = 2;
    string name = 3;
    string version = 4;
    string service_type = 5;
    string service_sub_type = 6;
    string namespace = 7;
    string token = 8;
    string company_id = 9;
    DaemonSetServiceAttributes service_attributes = 10;
}

message DaemonSetServiceAttributes {
    map<string, string> labels = 1;
    map<string, string> annotations = 2;
    LabelSelectorObj label_selector = 3;
    DaemonSetUpdateStrategy updateStrategy = 4;
    int32 minReadySeconds = 7;
    RevisionHistoryLimit revisionHistoryLimit = 8;
    Affinity affinity = 5;
    repeated Volume volumes = 9;
    map<string, ContainerAttributes> containers = 10;
    map<string, ContainerAttributes> initContainers = 11;
    map<string, string> node_selector = 6;
    IstioConfig istio_config = 12;
    bool is_rbac_enabled = 19;
    repeated K8sRbacAttribute roles= 20;
    repeated IstioRbacAttribute istio_roles = 21;
}

